update HomePage, PostItem, CommentItem

--- a/src/components/Layout/Components/Header/Header.module.scss
+++ b/src/components/Layout/Components/Header/Header.module.scss
@@ -87,12 +87,8 @@
   color: rgba(22, 24, 35, 0.75);
 }
 
-.profile {
+.profileBtn {
   margin-left: 20px;
-
-  &:hover {
-    transform: scale(1.1);
-  }
 }
 
 .avatar {
