--- a/src/components/MenuItem/MenuItem.module.scss
+++ b/src/components/MenuItem/MenuItem.module.scss
@@ -13,6 +13,7 @@
   &:hover {
     background-color: rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    transform: scale(1.05); // Replace 'scale:' with 'transform: scale(1.05);'
   }
 }
 
