--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,7 +1,3 @@
-.wrapper {
-  height: 100%;
-}
-
 .statusBar {
   margin-top: 16px;
   margin-right: auto;
@@ -56,14 +52,7 @@
   width: 44px;
 }
 
-.content {
-  height: 100%;
-  background-color: #333;
-  margin: 16px;
-}
-
 .postContainer {
   height: 100%;
-  margin: 24px;
-  background-color: white;
+  padding-bottom: 48px;
 }
