--- a/src/frontend/components/Button/Button.module.scss
+++ b/src/frontend/components/Button/Button.module.scss
@@ -52,11 +52,17 @@
   color: var(--white);
   background-color: var(--primary);
   cursor: pointer;
-  border-color: var(--primary);
+  border-color: var(--black);
 
   &:hover {
     border-color: var(--primary);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.06), rgba(0, 0, 0, 0.06)), #fe2c55;
+  }
+
+  &:active {
+    background-color: var(--primary);
+    border-color: var(--black);
+    color: var(--white);
   }
 }
 
